--- a/src/app/componentes/small-card/small-card.component.html
+++ b/src/app/componentes/small-card/small-card.component.html
@@ -1,19 +1,19 @@
 <div class="container-small-card">
     
     <div class="small-card-foto">
-        <a href="#"><img src="https://s2-techtudo.glbimg.com/5uxuv5zOC78iM9cGrYTGLmbdhgo=/0x0:1920x1080/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2019/R/c/UHbN0QR1GYvFPYtircDQ/sem-titulo-1.png" alt="campeonato cs-go" srcset=""></a>
+        <a [routerLink]="['conteudo', id]"><img src="{{conteudoFoto}}" alt="campeonato cs-go" srcset=""></a>
     </div>
 
     <div class="small-info">
         <div class="small-card-titulo">
-            <a href="#">Campeonato de CS:GO</a>
+            <a [routerLink]="['conteudo', id]">{{conteudoTitulo}}</a>
         </div>
         
         <div class="small-card-resumo">
-            <p>Mas GCzinha, quero jogar um campeonato de CS:GO rapidinho que dê algum dinheirinho. Comofas?
+            <p>{{conteudoTexto}}
             </p>
         </div>
-        <button>Saiba +</button>
+        <button [routerLink]="['conteudo', id]">Saiba +</button>
     </div>
 
 </div>
