--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,12 +2,28 @@
 
 <div class="artigos">
     <div class="artigo-principal">
-        <app-big-card></app-big-card>
+        <app-big-card
+        id="1"
+        conteudoFoto="https://www.adrenaline.com.br/wp-content/plugins/seox-image-magick/imagick_convert.php?width=910&height=568&format=webp&quality=91&imagick=/wp-content/uploads/2023/03/resident-evil-44.jpg"
+        conteudoTitulo="Sobre Resident Evil 4"
+        conteudoTexto="Leon S. Kennedy era apenas um policial novato quando presenciou o tenebroso evento que aconteceu em 1998, na cidade de Raccoon City. Muito tempo se passou e Leon finalmente conseguiu deixar para trás as imagens daquele dia. Seis anos depois, ele é um agente do serviço secreto norte-americano, responsável pela proteção da família presidencial."
+        ></app-big-card>
     </div>
 
     <div class="artigo-outros">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
+        <app-small-card
+        id="2"
+        conteudoFoto="https://s2.glbimg.com/-OxBJy8ZDlVopt1Jvh6Y8RRTJO0=/0x0:1200x800/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2019/2/J/WlQvthQO2EQtu5oIPYNQ/dciyy7wxoaebwnl.jpg"
+        conteudoTitulo="Campeonato de CS:GO"
+        conteudoTexto="Mas GCzinha, quero jogar um campeonato de CS:GO rapidinho que dê algum dinheirinho. Comofas?"
+        ></app-small-card>
+        <app-small-card
+        id="3"
+        conteudoFoto="https://www.torredevigilancia.com/wp-content/uploads/2018/12/1473738404_789399_1473744290_noticia_normal-810x456.jpg"
+        conteudoTitulo="Campeonato Mundial de LOL"
+        conteudoTexto="NÚMEROS RECORDES DO CAMPEONATO MUNDIAL DE LOL"
+        
+        ></app-small-card>
     </div>
     
 </div>
